@@ -5,7 +5,13 @@ import static eu.dnetlib.dhp.oa.provision.utils.GraphMappingUtils.removePrefix;
 import static org.apache.commons.lang3.StringUtils.isBlank;
 import static org.apache.commons.lang3.StringUtils.isNotBlank;
 
+import java.util.HashSet;
 import java.util.List;
+import java.util.Optional;
+import java.util.Set;
+import java.util.stream.Collectors;
+
+import org.apache.commons.lang3.StringUtils;
 
 import com.google.common.collect.Lists;
 
@@ -142,7 +148,7 @@ public class XmlSerializationUtils {
 	}
 
 	public static String getAttributes(final Qualifier q) {
-		if (q == null || q.isBlank())
+		if (q == null || StringUtils.isBlank(q.getClassid()))
 			return "";
 
 		return new StringBuilder(" ")
@@ -161,6 +167,22 @@ public class XmlSerializationUtils {
 			sb.append(" ").append(attr(attr._1(), attr._2()));
 		}
 		sb.append("/>");
+		return sb.toString();
+	}
+
+	// <measure views="0" datasource="infrastruct_::f66f1bd369679b5b077dcdf006089556||OpenAIRE" />
+	// <measure downloads="0" datasource="infrastruct_::f66f1bd369679b5b077dcdf006089556||OpenAIRE" />
+	public static String usageMeasureAsXmlElement(String name, Measure measure) {
+		StringBuilder sb = new StringBuilder();
+		for (KeyValue kv : measure.getUnit()) {
+			sb
+				.append("<")
+				.append(name)
+				.append(" ")
+				.append(attr(measure.getId(), kv.getValue()))
+				.append(attr("datasource", kv.getKey()))
+				.append(" />");
+		}
 		return sb.toString();
 	}
 
